Fixed mistake in test.ipynb

--- a/lecture02/test.ipynb
+++ b/lecture02/test.ipynb
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -147,21 +147,21 @@
       "6        8.77  2.00    Male     No  Sun  Dinner     2\n",
       "\n",
       "\n",
-      "total bill over 20\n",
-      "     total_bill   tip     sex smoker  day    time  size\n",
-      "2         21.01  3.50    Male     No  Sun  Dinner     3\n",
-      "3         23.68  3.31    Male     No  Sun  Dinner     2\n",
-      "4         24.59  3.61  Female     No  Sun  Dinner     4\n",
-      "5         25.29  4.71    Male     No  Sun  Dinner     4\n",
-      "7         26.88  3.12    Male     No  Sun  Dinner     4\n",
-      "..          ...   ...     ...    ...  ...     ...   ...\n",
-      "237       32.83  1.17    Male    Yes  Sat  Dinner     2\n",
-      "238       35.83  4.67  Female     No  Sat  Dinner     3\n",
-      "239       29.03  5.92    Male     No  Sat  Dinner     3\n",
-      "240       27.18  2.00  Female    Yes  Sat  Dinner     2\n",
-      "241       22.67  2.00    Male    Yes  Sat  Dinner     2\n",
+      "total bill under 20\n",
+      "     total_bill   tip     sex smoker   day    time  size\n",
+      "0         16.99  1.01  Female     No   Sun  Dinner     2\n",
+      "1         10.34  1.66    Male     No   Sun  Dinner     3\n",
+      "6          8.77  2.00    Male     No   Sun  Dinner     2\n",
+      "8         15.04  1.96    Male     No   Sun  Dinner     2\n",
+      "9         14.78  3.23    Male     No   Sun  Dinner     2\n",
+      "..          ...   ...     ...    ...   ...     ...   ...\n",
+      "234       15.53  3.00    Male    Yes   Sat  Dinner     2\n",
+      "235       10.07  1.25    Male     No   Sat  Dinner     2\n",
+      "236       12.60  1.00    Male    Yes   Sat  Dinner     2\n",
+      "242       17.82  1.75    Male     No   Sat  Dinner     2\n",
+      "243       18.78  3.00  Female     No  Thur  Dinner     2\n",
       "\n",
-      "[97 rows x 7 columns]\n",
+      "[147 rows x 7 columns]\n",
       "\n",
       "\n",
       "sorted by ascending tip\n",
@@ -194,10 +194,10 @@
     "print(df.head(7))\n",
     "print(\"\\n\")\n",
     "\n",
-    "#choosing only data with total bill over 20\n",
-    "over = df[df[\"total_bill\"] >= 20]\n",
-    "print(\"total bill over 20\")\n",
-    "print(over)\n",
+    "#choosing only data with total bill under 20\n",
+    "under = df[df[\"total_bill\"] <= 20]\n",
+    "print(\"total bill under 20\")\n",
+    "print(under)\n",
     "print(\"\\n\")\n",
     "\n",
     "#sorting values\n",
